Exec/Rook/Cluster/dashboard-ingress-https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  labels:
    app: rook-ceph-mgr

spec:
  rules:
    - http:
        paths:
          - path: /cephboard
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  number: 8080
